--- a/.github/workflows/audio_settings_tests.yml
+++ b/.github/workflows/audio_settings_tests.yml
@@ -4,8 +4,7 @@ on: workflow_dispatch
 
 jobs:
   test:
-    runs-on: ${{ matrix.os }}
-    matrix: { os: windows-latest, python-version: '3.9' }
+    runs-on: windows-latest
 
     steps:
       - name: Checkout destination repository
